facet-derive-emit/tests/codegen/snapshots/r#mod__codegen__rename_all_pascalcase.snap
---
source: facet-derive-emit/tests/codegen/mod.rs
expression: "expand(r#\"\n        #[derive(Facet)]\n        #[facet(rename_all = \"PascalCase\")]\n        struct PascalCaseExample {\n            field_one: String,\n            field_two: String,\n        }\n        \"#)"
---
#[used]
static PASCAL_CASE_EXAMPLE_SHAPE: &'static ::facet::Shape =
    <PascalCaseExample as ::facet::Facet>::SHAPE;
#[automatically_derived]
unsafe impl<'__facet> ::facet::Facet<'__facet> for PascalCaseExample {
    const VTABLE: &'static ::facet::ValueVTable = &const {
        let mut vtable = ::facet::value_vtable!(Self, |f, _opts| ::core::fmt::Write::write_str(
            f,
            "PascalCaseExample"
        ));
        vtable
    };
    const SHAPE: &'static ::facet::Shape<'static> = &const {
        let fields: &'static [::facet::Field] = &const {
            [
                {
                    ::facet::Field::builder()
                        .name("FieldOne")
                        .shape(::facet::shape_of(&|s: &PascalCaseExample| &s.field_one))
                        .offset(::core::mem::offset_of!(PascalCaseExample, field_one))
                        .build()
                },
                {
                    ::facet::Field::builder()
                        .name("FieldTwo")
                        .shape(::facet::shape_of(&|s: &PascalCaseExample| &s.field_two))
                        .offset(::core::mem::offset_of!(PascalCaseExample, field_two))
                        .build()
                },
            ]
        };
        ::facet::Shape::builder_for_sized::<Self>()
            .ty(::facet::Type::User(::facet::UserType::Struct(
                ::facet::StructType::builder()
                    .repr(::facet::Repr::c())
                    .kind(::facet::StructKind::Struct)
                    .fields(fields)
                    .build(),
            )))
            .build()
    };
}
