facet-derive-emit/tests/codegen/snapshots/r#mod__codegen__rename_all_screaming_snake_case.snap
---
source: facet-derive-emit/tests/codegen/mod.rs
expression: "expand(r#\"\n        #[derive(Facet)]\n        #[facet(rename_all = \"SCREAMING_SNAKE_CASE\")]\n        struct UpperCaseExample {\n            field_one: String,\n            field_two: String,\n        }\n        \"#)"
---
#[used]
static UPPER_CASE_EXAMPLE_SHAPE: &'static ::facet::Shape =
    <UpperCaseExample as ::facet::Facet>::SHAPE;
#[automatically_derived]
unsafe impl<'__facet> ::facet::Facet<'__facet> for UpperCaseExample {
    const SHAPE: &'static ::facet::Shape = &const {
        let fields: &'static [::facet::Field] = &const {
            [
                ::facet::Field::builder()
                    .name("FIELD_ONE")
                    .shape(|| ::facet::shape_of(&|s: &UpperCaseExample| &s.field_one))
                    .offset(::core::mem::offset_of!(UpperCaseExample, field_one))
                    .flags(::facet::FieldFlags::EMPTY)
                    .attributes(&const { [::facet::FieldAttribute::Rename("FIELD_ONE")] })
                    .build(),
                ::facet::Field::builder()
                    .name("FIELD_TWO")
                    .shape(|| ::facet::shape_of(&|s: &UpperCaseExample| &s.field_two))
                    .offset(::core::mem::offset_of!(UpperCaseExample, field_two))
                    .flags(::facet::FieldFlags::EMPTY)
                    .attributes(&const { [::facet::FieldAttribute::Rename("FIELD_TWO")] })
                    .build(),
            ]
        };
        let vtable = &const {
            let mut vtable = ::facet::value_vtable!(
                Self,
                |f, _opts| ::core::fmt::Write::write_str(f, "UpperCaseExample")
            );
            vtable
        };
        ::facet::Shape::builder()
            .id(::facet::ConstTypeId::of::<Self>())
            .layout(::core::alloc::Layout::new::<Self>())
            .vtable(vtable)
            .def(::facet::Def::Struct(
                ::facet::StructDef::builder()
                    .kind(::facet::StructKind::Struct)
                    .fields(fields)
                    .build(),
            ))
            .attributes(&[::facet::ShapeAttribute::RenameAll("SCREAMING_SNAKE_CASE")])
            .build()
    };
}
