facet-derive-emit/tests/codegen/snapshots/r#mod__codegen__rename_all_screaming_snakecase.snap
---
source: facet-derive-emit/tests/codegen/mod.rs
expression: "expand(r#\"\n        #[derive(Facet)]\n        #[facet(rename_all = \"SCREAMING_SNAKE_CASE\")]\n        struct ScreamingSnakeCaseExample {\n            field_one: String,\n            field_two: String,\n        }\n        \"#)"
---
#[used]
static SCREAMING_SNAKE_CASE_EXAMPLE_SHAPE: &'static ::facet::Shape =
    <ScreamingSnakeCaseExample as ::facet::Facet>::SHAPE;
#[automatically_derived]
unsafe impl<'__facet> ::facet::Facet<'__facet> for ScreamingSnakeCaseExample {
    const VTABLE: &'static ::facet::ValueVTable = &const {
        let mut vtable = ::facet::value_vtable!(Self, |f, _opts| ::core::fmt::Write::write_str(
            f,
            "ScreamingSnakeCaseExample"
        ));
        vtable
    };
    const SHAPE: &'static ::facet::Shape = &const {
        let fields: &'static [::facet::Field] = &const {
            [
                {
                    ::facet::Field::builder()
                        .name("FIELD_ONE")
                        .shape(::facet::shape_of(&|s: &ScreamingSnakeCaseExample| {
                            &s.field_one
                        }))
                        .offset(::core::mem::offset_of!(
                            ScreamingSnakeCaseExample,
                            field_one
                        ))
                        .build()
                },
                {
                    ::facet::Field::builder()
                        .name("FIELD_TWO")
                        .shape(::facet::shape_of(&|s: &ScreamingSnakeCaseExample| {
                            &s.field_two
                        }))
                        .offset(::core::mem::offset_of!(
                            ScreamingSnakeCaseExample,
                            field_two
                        ))
                        .build()
                },
            ]
        };
        ::facet::Shape::builder_for_sized::<Self>()
            .ty(::facet::Type::User(::facet::UserType::Struct(
                ::facet::StructType::builder()
                    .repr(::facet::Repr::c())
                    .kind(::facet::StructKind::Struct)
                    .fields(fields)
                    .build(),
            )))
            .build()
    };
}
